# thesis

./: .gitignore  README.md  desktop.ini  errors_map.csv  evaluation.py  id_types_alignment.csv  oc_idmanager.puml.plantuml  pyproject.toml  requirements.txt  validation_flowchart.drawio
CITS/: create_report.py  duplicates.py  functions.py  get_duplicates.py  helper_functions.py  id_checker.py  messages.yaml  meta_duplicates.py  meta_required_fields.py  presentazione_meeting009.py  validate_cits.py  validate_meta.py  validation_functions.py
CITS/oc_idmanager/: __init__.py  doi.py  isbn.py  issn.py  orcid.py  pmcid.py  pmid.py  ror.py  support.py  url.py  viaf.py  wikidata.py  wikipedia.py
check_output/: README.md  check_validation_output.py  error_report_schema.json  position_tmp.json  single_error_schema.json  single_validation_output_schema.json
evaluation/: evaluation.py
evaluation/evaluation_results/: invalid_cits_evaluation.txt  meta_table_with_ids_evaluation.txt
evaluation_results/: invalid_meta_evaluation.txt  meta_table_no_ids_evaluation.txt  valid_cits_evaluation.txt  valid_meta_evaluation.txt
software_evaluation/: out_validate_cits.json
test/: unitt.py
test/output/: cits_validation_summary.txt  (+1 more)
test_files/: invalid_cits.csv  invalid_meta.csv  valid_cits.csv  valid_meta.csv
validation_output/: meta_validation_summary.txt  out_validate_cits.json  out_validate_meta.json
validation_process/: validation_flowchart.drawio
validator/: __init__.py  csv_wellformedness.py  helper.py  id_existence.py  id_syntax.py  main.py  messages.yaml  semantics.py
(+15 files in other folders)
