[tool.poetry]
name = "oc-table-validator"
version = "0.1.0"
description = "A software to validate CSV documents storing citation data and bibliographic metadata according to the OpenCitations Data Model."
authors = ["Silvio Peroni <silvio.peroni@unibo.it>","Elia Rizzetto <elia.rizzetto@gmail.com>"]
license = "ISC"
readme = "README.md"
packages = [
    {include = "validator"},
    {include = "check_output"}
]

[tool.poetry.dependencies]
python = "^3.9"
oc-idmanager = "^0.2.6"
pyyaml = "^6.0"
roman = "^4.0"
jsonschema = "^4.17.3"
argparse = "^1.4.0"


[tool.poetry.group.dev.dependencies]
jsonschema = "^4.17.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
